# commerce

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .prettierignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.test  Makefile  README.ar.md  README.de.md  README.es.md  README.fr.md  README.hi.md  README.id.md  README.it.md  README.ja.md  README.ko.md  README.md  README.pt.md  README.ru.md  README.th.md  README.tr.md  README.vi.md  README.zh-Hans.md  README.zh-Hant.md  SECURITY.md  THIRD_PARTY_NOTICES.txt  UPGRADING.md  conftest.py  docker-compose.dev.yml  docker-compose.gpu.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  (+11 more)
.github/: CODEOWNERS  FUNDING.yml  pull_request_template.md
accounts/: __init__.py  adapter.py  admin.py  admin_urls.py  admin_views.py  api_urls.py  api_urls_hq.py  api_views.py  api_views_hq.py  constants.py  forms.py  mfa_views.py  models.py  oauth_views.py  serializers.py  serializers_hq.py  tasks.py  urls.py  views.py  views_hosting.py
address_autocomplete/: apps.py  client_jwt.py  jwt_auth.py  license_integration.py  license_views.py  services.py  services_secured.py  settings_example.py  settings_template.py  urls.py  urls_license.py  validation.py  views.py
admin_api/: __init__.py  admin.py  admin_urls.py  admin_views.py  apps.py  authentication.py  models.py  permissions.py  signals.py  tasks.py  throttling.py  urls.py
affiliate/: __init__.py  admin.py  admin_urls.py  admin_views.py  api_urls.py  apps.py  attribution.py  decorators.py  models.py  serializers.py  signals.py  tasks.py  urls.py  views.py
announcements/: admin.py  api_urls.py  api_views.py  apps.py  forms.py  models.py  signals.py
blog/: admin.py  admin_urls.py  admin_views.py  api_urls.py  api_views.py  models.py  serializers.py  tasks.py  urls.py
cart/: __init__.py  admin.py  admin_urls.py  apps.py  forms.py  method_wizard.py  mini_cart_api.py  models.py  permissions.py  serializers.py  urls.py  views.py
catalog/: __init__.py  admin.py  admin_urls.py  admin_views.py  api_urls.py  api_views.py  apps.py  catalog_views.py  download_views.py  filters.py  forms.py  license_api_views.py  license_serializers.py  middleware.py  models.py  serializer_mixins.py  serializers.py  signals.py  tasks.py  tests.py  translation.py  urls.py
component_updates/: README.md  admin.py  apps.py  finders.py  installers.py  integration_paths.py  language_pack_installer.py  models.py  services.py  tasks.py  utility_discovery.py  utility_registry.py  utility_translations.py  utility_version_manager.py
configurator_3d/: admin.py  admin_urls.py  admin_views.py  apps.py  models.py  serializers.py
core/: __init__.py  activation.py  admin.py  admin_mixins.py  admin_oauth_summary.py  api_urls.py  apps.py  asgi.py  celery.py  celery_utils.py  checks.py  context_processors.py  currency_context.py  currency_views.py  db_router.py  decorators.py  icon_registry.py  integrity_check.py  language_metadata.py  license.py  license_acceptance.py  license_convert.py  license_grace.py  middleware.py  models.py  platform_secrets.py  settings.py  signals.py  storage.py  supported_currency_model.py  tasks.py  translation.py  translation_utils.py  urls.py  version.py  views.py  widgets.py  wsgi.py
custom_fields/: admin.py  api_urls.py  api_views.py  apps.py  mixins.py  models.py  serializers.py  signals.py  urls.py  validators.py  views.py
customers/: __init__.py  admin.py  apps.py  models.py  serializers.py  tasks.py  urls.py  urls_admin.py  views.py
customizable_product/: admin.py  admin_urls.py  admin_views.py  api_urls.py  api_views.py  apps.py  models.py  tasks.py
design/: __init__.py  admin.py  admin_urls.py  admin_views.py  apps.py  branding_admin.py  branding_builder_view.py  component_manifest_schema.json  component_packager.py  component_permissions.py  component_registry_service.py  component_schema_validator.py  component_signer.py  component_validator.py  content_sanitizer.py  context_processors.py  dashboard_view.py  dev_server_service.py  dev_server_urls.py  dev_server_views.py  header_footer_admin.py  header_footer_models.py  header_footer_views.py  hf_api_urls.py  hf_api_views.py  hf_builder_views.py  hf_serializers.py  layout_renderer.py  layout_renderer_demo_view.py  menu_api_urls.py  menu_api_views.py  menu_serializers.py  models.py  schema_registry.py  signals.py  slot_injector.py  template_config_views.py  template_loader.py  template_registry.py  theme_manifest_schema.json  (+14 more)
developer_portal/: admin.py  admin_urls.py  admin_views.py  apps.py  models.py  tasks.py  urls.py  views.py
docker/: apply-hotfixes.sh  setup-component-volume.sh  supervisor-postfix.conf  supervisor-smtp-server.conf  supervisor-spwig.conf  supervisord.conf
domain_ssl/: admin.py  api_urls.py  apps.py  middleware.py  models.py  tasks.py  views.py
element_builder/: __init__.py  admin.py  admin_urls.py  admin_views.py  api_views.py  apps.py  models.py  registry.py  serializers.py  urls.py
email_system/: admin.py  admin_urls.py  admin_views.py  apps.py  models.py  signals.py  tracking_urls.py  urls.py
email_templates_for_translation/: INDEX.md  PROGRESS.md  README.md  account_invitation.ar.md  account_invitation.de.md  account_invitation.es.md  account_invitation.fr.md  account_invitation.hi.md  account_invitation.id.md  account_invitation.it.md  account_invitation.ja.md  account_invitation.ko.md  account_invitation.md  account_invitation.pt.md  account_invitation.ru.md  account_invitation.th.md  account_invitation.tr.md  account_invitation.vi.md  account_invitation.zh-hans.md  account_invitation.zh-hant.md  account_welcome.ar.md  account_welcome.de.md  account_welcome.es.md  account_welcome.fr.md  account_welcome.hi.md  account_welcome.id.md  account_welcome.it.md  account_welcome.ja.md  account_welcome.ko.md  account_welcome.md  account_welcome.pt.md  account_welcome.ru.md  account_welcome.th.md  account_welcome.tr.md  account_welcome.vi.md  account_welcome.zh-hans.md  account_welcome.zh-hant.md  (+3354 more)
(+8392 files in other folders)
